# search-labs

./: .gitignore
lab1/: commands.txt  index_terms.json  initial_index_terms.json  inverted_index.py  main.py  pyproject.toml  vector.py  vector_index_terms.json
lab1/text_corpus/: brown eagle.txt  eagle.txt  foxes.txt  wolfs.txt
lab2/: album_document.py  commands.txt  config.py  main.py  pyproject.toml  queries.py
lab2/texts/iron_maiden/: additional_notes.txt  critical_reception.txt  description.txt
lab2/texts/just_for_a_day/: additional_notes.txt  critical_reception.txt  description.txt
lab2/texts/loveless/: additional_notes.txt  critical_reception.txt  description.txt
lab2/texts/soulvaki/: additional_notes.txt  critical_reception.txt  description.txt
